fix: fix some errors in Part II and finalize it

--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -1062,10 +1062,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17489"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "#Number of conversions for each page\n",
+    "convert_old = sum(df2.query('group == \"control\"')['converted'])\n",
+    "convert_new = sum(df2.query('group == \"treatment\"')['converted'])\n",
+    "\n",
+    "#Number of individuals who received each page\n",
+    "n_old = df2.query(\"group == 'control'\")['user_id'].count()\n",
+    "n_new = df2.query(\"group == 'treatment'\")['user_id'].count()\n",
+    "\n",
+    "#Convert figures to integers\n",
+    "#n_old = int(n_old)\n",
+    "#n_new = int(n_new)\n",
+    "\n",
+    "convert_old"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1076,17 +1103,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3109241984234394"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_score, p_value = sm.stats.proportions_ztest([convert_old, convert_new], [n_old, n_new], alternative='larger')\n",
+    "z_score"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09494168724097551"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1096,10 +1150,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9050583127590245\n",
+      "1.6448536269514722\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "# How significant our z-score is\n",
+    "print(norm.cdf(z_score))\n",
+    "\n",
+    "\n",
+    "# for our single-sides test, assumed at 95% confidence level, we calculate: \n",
+    "print(norm.ppf(1-(0.05)))\n",
+    "\n",
+    "# Tells us what our critical value at 95% confidence is \n",
+    "# Here, we take the 95% values as specified in PartII.1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Put your answer here.**"
+    "**Answer:**\n",
+    "- The z-score of 1.31092419842 is less than the critical value of 1.64485362695. So, we accept the null hypothesis.\n",
+    "- As regards the conversion rates of the old and new pages, we find that old pages are only minutely better than new pages. \n",
+    "- These values agree with the findings in parts j. and k. "
    ]
   },
   {
@@ -1202,54 +1287,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "US    203619\n",
-       "UK     72466\n",
-       "CA     14499\n",
-       "Name: country, dtype: int64"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "countries_df = pd.read_csv('./countries.csv')\n",
-    "df_new = countries_df.set_index('user_id').join(df2.set_index('user_id'), how='inner')\n",
-    "df_new['country'].value_counts()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "US    203619\n",
-       "UK     72466\n",
-       "CA     14499\n",
-       "Name: country, dtype: int64"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "### Create the necessary dummy variables\n",
-    "df_new[['CA', 'US']] = pd.get_dummies(df_new['country'])[['CA','US']]\n",
-    "\n",
-    "df_new['country'].astype(str).value_counts()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1262,160 +1310,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimization terminated successfully.\n",
-      "         Current function value: 0.447174\n",
-      "         Iterations 6\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"simpletable\">\n",
-       "<caption>Logit Regression Results</caption>\n",
-       "<tr>\n",
-       "  <th>Dep. Variable:</th>     <td>converted</td>    <th>  No. Observations:  </th>   <td>290584</td>   \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Model:</th>               <td>Logit</td>      <th>  Df Residuals:      </th>   <td>290582</td>   \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Method:</th>               <td>MLE</td>       <th>  Df Model:          </th>   <td>     1</td>   \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Date:</th>          <td>Wed, 01 May 2019</td> <th>  Pseudo R-squ.:     </th>   <td>-0.2214</td>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Time:</th>              <td>22:27:48</td>     <th>  Log-Likelihood:    </th> <td>-1.2994e+05</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td>-1.0639e+05</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th> </th>                      <td> </td>        <th>  LLR p-value:       </th>   <td> 1.000</td>   \n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "   <td></td>     <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>CA</th> <td>   -2.0375</td> <td>    0.026</td> <td>  -78.364</td> <td> 0.000</td> <td>   -2.088</td> <td>   -1.987</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>US</th> <td>   -1.9967</td> <td>    0.007</td> <td> -292.314</td> <td> 0.000</td> <td>   -2.010</td> <td>   -1.983</td>\n",
-       "</tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<class 'statsmodels.iolib.summary.Summary'>\n",
-       "\"\"\"\n",
-       "                           Logit Regression Results                           \n",
-       "==============================================================================\n",
-       "Dep. Variable:              converted   No. Observations:               290584\n",
-       "Model:                          Logit   Df Residuals:                   290582\n",
-       "Method:                           MLE   Df Model:                            1\n",
-       "Date:                Wed, 01 May 2019   Pseudo R-squ.:                 -0.2214\n",
-       "Time:                        22:27:48   Log-Likelihood:            -1.2994e+05\n",
-       "converged:                       True   LL-Null:                   -1.0639e+05\n",
-       "                                        LLR p-value:                     1.000\n",
-       "==============================================================================\n",
-       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
-       "------------------------------------------------------------------------------\n",
-       "CA            -2.0375      0.026    -78.364      0.000      -2.088      -1.987\n",
-       "US            -1.9967      0.007   -292.314      0.000      -2.010      -1.983\n",
-       "==============================================================================\n",
-       "\"\"\""
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "### Fit Your Linear Model And Obtain the Results\n",
-    "\n",
-    "df['intercept'] = 1\n",
-    "\n",
-    "\n",
-    "log_mod = sm.Logit(df_new['converted'], df_new[['CA', 'US']])\n",
-    "results = log_mod.fit()\n",
-    "results.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CA    0.130350\n",
-       "US    0.135779\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.exp(results.params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CA    7.671651\n",
-       "US    7.364925\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1/_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "group\n",
-       "control      0.120386\n",
-       "treatment    0.118807\n",
-       "Name: converted, dtype: float64"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.groupby('group').mean()['converted']"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
